# incubator-datadriver

./: README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/: App.vue  fontawesome.ts  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  main.rs  storage.rs
src-tauri/src/connector/: connector.rs
src-tauri/src/rpa/: connector.rs
src/components/: Greet.vue
src/layout/: LayoutContainer.vue
src/layout/components/: LayoutContent.vue  LayoutHeader.vue  LayoutHeaderRight.vue
src/router/: index.ts
src/views/connector/: HomeView.vue  Utils.ts
